package: add build script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "scripts": {
     "start": "imba src/http.imba",
+    "build": "imba build src/http.imba",
     "start-express": "imba src/express.imba"
   }
 }
